<resources>

    <string name="app_name">快阅微博</string>
    <string name="menu_settings">Settings</string>
    <string name="title1">户</string>
    <string name="title2">/@</string>
    <string name="title3">信</string>
    <string name="title4">评</string>
    <string name="title5">藏</string>
    <string name="user_name">GESTRUE</string>
    <string name="re_login">登录过期，请重新登录</string>
    <string name="time_out">登录超时，请检查网络</string>
    <string name="groups_title">分组名单 </string>
    <string name="menu0">个人账号 </string>
    <string name="menu1">账号管理</string>
    <string name="menu2">添加账号 </string>
    <string name="menu3">收藏 </string>
    <string name="setmenu">设置 </string>
    <string name="bottom_1">原文</string>
    <string name="bottom_2">转发</string>
    <string name="bottom_3">评论</string>
    <string name="bottom_4">收藏</string>
    <string name="comm_1">回复评论</string>
    <string name="comm_2">查看原文</string>
    <string name="re_comm">回复</string>
    <string name="details">详细资料</string>
    <string name="attention">关注</string>
    <string name="attention_not">取消关注</string>
	<string name="exit">确定退出？</string>
    <string name="sure_exit">退出</string>
    <string name="back">返回</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新中</string>
    <string name="pull_to_refresh_tap_label">点击刷新</string>
    <string name="update_hint">说点什么吧......</string>
    <string name="submit">发表</string>
    <string name="information_title">详细资料</string>
    <string name="information_title1">基本信息</string>
    <string name="information_title2">教育信息</string>
    <string name="screen_name">昵称</string>
    <string name="gender">性别</string>
    <string name="location">所在地</string>
    <string name="description">简介</string>
    <string name="delete_all">是否要删除这条微博？</string>
    <string name="ok">是</string>
    <string name="cancel">否</string>
    <string name="close">关闭</string>
    <string name="share_dialog_title">新浪微博</string>
    <string name="please_login">请登录！</string>
    <string name="send_sucess">分享成功！</string>
    <string name="send_failed">分享失败！</string>
    <string name="del_pic">是否删除图片？</string>
    <string name="send">发送</string>
    <string name="find_hint">请输入搜索内容</string>
    <string name="set_fontSize">字体大小</string>
    <string name="set_font1">小字体</string>
    <string name="set_font2">中字体</string>
    <string name="set_font3">大字体</string>
    <string name="set_image">浏览模式</string>
    <string name="set_image_samrt">智能模式</string>
    <string name="set_image_big">大图模式</string>
	<string name="set_image_small">小图模式</string>
    <string name="set_image_none">无图模式</string>
    <string name="set_version">版本信息</string>
    <string name="set_about">关于</string>
    <string name="timeout">请求超时</string>
    <string name="unknown_error_error_code">未知错误</string>
    <string name="des_title">更新内容</string>
    <string name="size_title">软件大小：</string>
    <string name="up_cancel">稍后提醒</string>
    <string name="up_ok">马上更新 </string>
    <string name="net_error">没有网络 </string>
    <string name="profile_title">个人主页</string>
    <string name="tab_title1">微博</string>
    <string name="tab_title2">好友</string>
    <string name="tab_title3">粉丝</string>
</resources>