<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/home_back">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/actionebar"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/set_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:scaleType="centerInside"
            android:src="@drawable/back02" />

	    <ImageView 
	        android:id="@+id/set_head"
	        android:scaleType="fitXY"
	        android:layout_width="@dimen/head_size"
	        android:layout_height="@dimen/head_size"
	        android:layout_margin="5dp"
	        android:adjustViewBounds="true"
	        android:layout_centerVertical="true"
	        android:layout_toRightOf="@+id/set_back"/>
	    <TextView 
	        android:id="@+id/set_userName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:text="@string/setmenu"
	        android:textColor="@color/title_text"
	        android:textSize="@dimen/text_normal"/>
	</RelativeLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:padding="10dp"
	    android:orientation="vertical">
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="vertical">
	        <TextView 
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:paddingTop="10dp"
	            android:paddingBottom="10dp"
	            android:text="@string/set_fontSize"
	            android:textStyle="bold"
	            android:textColor="@color/set_fontsize"
	            android:textSize="@dimen/text_big"/>
			<View 
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:background="@color/set_line_big">
			    
			</View>
	        <RadioGroup
	            android:id="@+id/radioGroup1"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" >

	            <RadioButton
	                android:id="@+id/radio_font1"
	                android:layout_width="fill_parent"
	                android:layout_height="@dimen/set_radio_height"
	                android:checked="true"
	                android:button="@null"
	                android:padding="0dp"
	                android:layout_margin="0dp"
	                android:drawableRight="@drawable/set_true"
	                android:text="@string/set_font1"
	                android:textColor="@color/title_text"
	                android:textSize="@dimen/text_normal"/>
				<View 
				    android:layout_width="fill_parent"
				    android:layout_height="1dp"
				    android:background="@color/set_line_small"/>
	            <RadioButton
	                android:id="@+id/radio_font2"
	                android:layout_width="fill_parent"
	                android:layout_height="@dimen/set_radio_height"
	                android:checked="true"
	                android:button="@null"
	                android:padding="0dp"
	                android:drawableRight="@drawable/set_false"
	                android:text="@string/set_font2"
	                android:textColor="@color/title_text"
	                android:textSize="@dimen/text_normal"/>
				<View 
				    android:layout_width="fill_parent"
				    android:layout_height="1dp"
				    android:background="@color/set_line_small"/>
	            <RadioButton
	                android:id="@+id/radio_font3"
	                android:layout_width="fill_parent"
	                android:layout_height="@dimen/set_radio_height"
	                android:checked="true"
	                android:button="@null"
	                android:padding="0dp"
	                android:drawableRight="@drawable/set_false"
	                android:text="@string/set_font3"
	                android:textColor="@color/title_text"
	                android:textSize="@dimen/text_normal"/>
	        </RadioGroup>
	        <View 
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:background="@color/set_line_big"/>
	        <TextView 
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:paddingTop="10dp"
	            android:paddingBottom="10dp"
	            android:text="@string/set_image"
	            android:textStyle="bold"
	            android:textColor="@color/set_fontsize"
	            android:textSize="@dimen/text_normal"/>
	        <View 
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:background="@color/set_line_big"/>
	        <RadioGroup
	            android:id="@+id/radioGroup2"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" >

	            <RadioButton
	                android:id="@+id/radio_image1"
	                android:layout_width="fill_parent"
	                android:layout_height="@dimen/set_radio_height"
	                android:checked="true"
	                android:button="@null"
	                android:padding="0dp"
	                android:drawableRight="@drawable/set_true"
	                android:text="@string/set_image_samrt"
	                android:textColor="@color/title_text"
	                android:textSize="@dimen/text_normal"/>
				<View 
				    android:layout_width="fill_parent"
				    android:layout_height="1dp"
				    android:background="@color/set_line_small"/>
	            <RadioButton
	                android:id="@+id/radio_image2"
	                android:layout_width="fill_parent"
	                android:layout_height="@dimen/set_radio_height"
	                android:checked="true"
	                android:button="@null"
	                android:padding="0dp"
	                android:drawableRight="@drawable/set_false"
	                android:text="@string/set_image_big"
	                android:textColor="@color/title_text"
	                android:textSize="@dimen/text_normal"/>
				<View 
				    android:layout_width="fill_parent"
				    android:layout_height="1dp"
				    android:background="@color/set_line_small"/>
	            <RadioButton
	                android:id="@+id/radio_image3"
	                android:layout_width="fill_parent"
	                android:layout_height="@dimen/set_radio_height"
	                android:checked="true"
	                android:button="@null"
	                android:padding="0dp"
	                android:drawableRight="@drawable/set_false"
	                android:text="@string/set_image_small"
	                android:textColor="@color/title_text"
	                android:textSize="@dimen/text_normal"/>
	            <View 
				    android:layout_width="fill_parent"
				    android:layout_height="1dp"
				    android:background="@color/set_line_small"/>
	            <RadioButton
	                android:id="@+id/radio_image4"
	                android:layout_width="fill_parent"
	                android:layout_height="@dimen/set_radio_height"
	                android:checked="true"
	                android:button="@null"
	                android:padding="0dp"
	                android:drawableRight="@drawable/set_false"
	                android:text="@string/set_image_none"
	                android:textColor="@color/title_text"
	                android:textSize="@dimen/text_normal"/>
	        </RadioGroup>
	        <View 
				    android:layout_width="fill_parent"
				    android:layout_height="1dp"
				    android:background="@color/set_line_big"/>
	        <TextView 
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:paddingTop="10dp"
	            android:text="@string/set_version"
	            android:textColor="@color/set_fontsize"
	            android:textSize="@dimen/text_big"/>
	        <TextView 
	            android:id="@+id/set_version"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:paddingBottom="10dp"
	            android:textColor="@color/title_text"
	            android:textSize="@dimen/text_small"/>
	    </LinearLayout>
	</LinearLayout>
</LinearLayout>