<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/dialog_bg">
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" 
	    android:background="@drawable/popup_bg"
	    android:paddingLeft="30dp"
	    android:paddingRight="30dp"
	    android:paddingBottom="30dp"
	    android:paddingTop="20dp"
	    android:layout_margin="10dp">
	        <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:gravity="center_vertical">
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:gravity="center_vertical"
	            android:text="@string/app_name"
	            android:textColor="@color/blue"
		  	  	android:textSize="@dimen/text_normal"/>
	        <TextView 
	            android:id="@+id/version_name"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:gravity="center_vertical"
	            android:textColor="@color/title_text"
		    	android:textSize="@dimen/text_normal"/>
		</LinearLayout>
		<View
		    android:layout_width="fill_parent"
		    android:layout_height="0.5dp"
		    android:background="@color/menu_line_top"/>
		<View
		    android:layout_width="fill_parent"
		    android:layout_height="0.5dp"
		    android:background="@color/menu_line_bottom" />
		<TextView 
		    android:layout_width="match_parent"
		    android:layout_height="40dp"
		    android:gravity="center_vertical"
		    android:text="@string/des_title"
		    android:textColor="@color/title_text"
		    android:textSize="@dimen/text_normal"/>
		<TextView 
		    android:id="@+id/updata_des"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:lineSpacingExtra="10dp"
		    android:singleLine="false"
		    android:text="1. 更新UI\n2. 解决了很多导致崩溃的问题"
		    android:textColor="@color/title_text"
		    android:textSize="@dimen/text_normal"/>
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content">
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/size_title"
			    android:textColor="@color/title_text"
			    android:textSize="@dimen/text_normal"/>
		    <TextView 
		        android:id="@+id/up_size"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/size_title"
		        android:textStyle="bold"
			    android:textColor="@color/title_text"
			    android:textSize="@dimen/text_normal3"/>
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingTop="10dp">
		    <Button 
		        android:id="@+id/updata_cancel_btn"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:background="@drawable/button_selector"
		        android:layout_weight="1"
		        android:padding="5dp"
		        android:text="@string/up_cancel"
		        android:textColor="@color/title_text"
		        android:textSize="@dimen/text_normal3"
		        android:layout_marginRight="5dp"/>
		    <Button 
		        android:id="@+id/updata_ok_btn"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:background="@drawable/button_selector2"
		        android:layout_weight="1"
		        android:padding="5dp"
		        android:text="@string/up_ok"
		        android:textColor="@color/white"
		        android:textSize="@dimen/text_normal3"
		        android:layout_marginLeft="5dp"/>
		</LinearLayout>
    </LinearLayout>
    
</LinearLayout>