<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2f2f2f"
    android:id="@+id/menuView"
    android:orientation="vertical" >
    <LinearLayout 
	    android:id="@+id/groups"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	    <RelativeLayout 
	        android:id="@+id/groups_title"
	        android:layout_width="match_parent"
	        android:layout_height="40dp">
	        <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:paddingLeft="10dp"
		        android:textColor="@color/menu_text_color"
		        android:text="@string/groups_title"
		        android:gravity="left|center_vertical"/>
	        <TextView 
	            android:id="@+id/groupsize"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:layout_toLeftOf="@+id/groups_pointing"
	            android:paddingRight="5dp"
	            android:textColor="@color/menu_item_unselect"
	            android:gravity="right|center_vertical"/>
	        <ImageView 
		        android:id="@+id/groups_pointing"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="5dp"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"
		        android:scaleType="center"
		        android:adjustViewBounds="true"
		        android:src="@drawable/shang"/>
	    </RelativeLayout>
	    <include 
	        layout="@layout/menu_line"/>
	    <ListView 
		    android:id="@+id/groups_list"
		    android:layout_width="fill_parent"
		    android:layout_height="140dp"
		    android:divider="@color/menu_list_line"
		    android:dividerHeight="0.5dp"
		    android:background="#202020"
		    android:listSelector="@color/alpha"
		    android:fadingEdge="none"
		    android:cacheColorHint="#00000000"/>
	    <include 
	        layout="@layout/menu_line"/>
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/menu1"
	    android:orientation="vertical">
		<RelativeLayout 
		    android:layout_width="fill_parent"
		    android:paddingLeft="10dp"
		    android:paddingRight="10dp"
		    android:layout_height="40dp">
		    <TextView
		        android:id="@+id/menu_name1"
		        android:layout_width="wrap_content"
		        android:paddingTop="5dp"
		        android:paddingBottom="5dp"
		        android:textColor="@color/menu_text_color"
		        android:text="@string/menu1"
		        android:textSize="@dimen/text_big_size"
		        android:gravity="left|center_vertical"
		        android:layout_height="fill_parent" />
		    <TextView 
		        android:id="@+id/user_size"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:paddingTop="5dp"
		        android:paddingBottom="5dp"
		        android:paddingRight="5dp"
		        android:textColor="@color/menu_item_unselect"
		        android:layout_toLeftOf="@+id/user_pointing"
		        android:gravity="right|center_vertical"/>
		    <ImageView 
		        android:id="@+id/user_pointing"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="5dp"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"
		        android:scaleType="center"
		        android:adjustViewBounds="true"
		        android:src="@drawable/xia"/>
		</RelativeLayout>
		<include 
	        layout="@layout/menu_line"/>
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/menuhide"
	    android:visibility="visible"
	    android:orientation="vertical">
		<ListView 
		    android:id="@+id/menu_user_list"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:divider="@color/menu_list_line"
		    android:dividerHeight="0.5dp"
		    android:background="#202020"
		    android:listSelector="@color/alpha"
		    android:fadingEdge="none"
		    android:cacheColorHint="#00000000">
		</ListView>
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/menu2"
	    android:orientation="vertical"
	    android:paddingBottom="40dp">
		
		<RelativeLayout 
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:paddingLeft="10dp"
		    android:paddingRight="10dp"
		    android:layout_height="40dp">
		    <TextView
		        android:id="@+id/menu_name2"
		        android:layout_width="wrap_content"
		        android:paddingTop="5dp"
		        android:paddingBottom="5dp"
		        android:textColor="@color/menu_text_color"
		        android:text="@string/menu2"
		        android:textSize="@dimen/text_big_size"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
		        android:gravity="left|center_vertical"
		        android:layout_height="fill_parent" />
		    <ImageView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/add"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"/>
		</RelativeLayout>
		<include 
	        layout="@layout/menu_line"/>
	</LinearLayout>
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:layout_height="40dp"
	    android:id="@+id/menu4">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:paddingTop="5dp"
		    android:paddingBottom="5dp"
		    android:textSize="@dimen/text_big_size"
	        android:textColor="@color/menu_text_color"
		    android:text="@string/profile_title"
		    android:gravity="left|center_vertical"/>
	    <ImageView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/accoun"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"/>
	</RelativeLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/menu3"
	    android:orientation="vertical">
	    <include 
	        layout="@layout/menu_line"/>
		<RelativeLayout 
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:paddingLeft="10dp"
		    android:paddingRight="10dp"
		    android:layout_height="40dp">
		    <TextView
		        android:id="@+id/menu_name3"
		        android:layout_width="wrap_content"
		        android:paddingTop="5dp"
		        android:paddingBottom="5dp"
		        android:textColor="@color/menu_text_color"
		        android:text="@string/setmenu"
		        android:textSize="@dimen/text_big_size"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
		        android:gravity="left|center_vertical"
		        android:layout_height="fill_parent" />
		    <ImageView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/set"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"/>
		</RelativeLayout>
	</LinearLayout>
	<include 
	        layout="@layout/menu_line"/>
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
	    android:paddingLeft="10dp"
		android:paddingRight="10dp">
	    <TextView 
	        android:id="@+id/version"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingTop="5dp"
	        android:textColor="@color/menu_text_color"
	        android:text="@string/set_version"
	        android:textSize="@dimen/text_big_size"
	        android:layout_alignParentLeft="true"/>
	    <TextView 
	        android:id="@+id/menu_versionCode"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingTop="5dp"
	        android:textColor="@color/menu_item_unselect"
	        android:text="@string/set_version"
	        android:textSize="@dimen/text_small"
	        android:layout_below="@+id/version"
	        android:layout_alignParentLeft="true"/>
	    <ImageView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/info"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"/>
	</RelativeLayout>
</LinearLayout>