<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/home_back">
	 <TextView 
	    android:id="@+id/commentT"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:visibility="gone"
	    android:paddingLeft="5dp"
	    android:layout_margin="3dp"
	    android:textColor="@color/title_text"
	    android:textSize="@dimen/text_normal"
	    android:gravity="center_vertical"
	    android:layout_alignParentTop="true"
	    android:background="@drawable/background"/>
    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/up_bottom"
        android:layout_below="@+id/commentT"
        android:background="@drawable/input_bg2"
        android:layout_margin="3dp"
        android:padding="10dp" >
        <EditText
            android:id="@+id/update_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/alpha"
            android:gravity="top|left"
            android:hint="@string/update_hint"
            android:textColor="@color/title_text"
            android:textColorHint="@color/hint"
            android:textSize="@dimen/text_normal" >
        </EditText>
        <ImageView
            android:id="@+id/picImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom|left"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/count_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:padding="10dp"
            android:textColor="@color/count_text"
            android:textSize="26sp" />
        <LinearLayout 
            android:id="@+id/friendView"
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:visibility="gone"
            android:background="@color/white"
            android:layout_gravity="top"
            android:orientation="vertical">
            <EditText 
                android:id="@+id/name_auto"
                android:hint="@string/find_hint"
                android:layout_width="fill_parent"
                android:layout_height="40dp"/>
            <ListView 
	            android:id="@+id/friendList"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:listSelector="@color/alpha"
	       		android:cacheColorHint="#00000000"
	       		android:background="@drawable/listview_bg"
	       		android:divider="@color/alpha"
	       		android:dividerHeight="0dp"
	            >
	        </ListView>
        </LinearLayout>
    </FrameLayout>
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/face_gridView"
	    android:orientation="vertical"
	    android:id="@+id/up_bottom">
        <TextView 
	    android:id="@+id/zhuan"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingLeft="5dp"
	    android:layout_margin="3dp"
	    android:visibility="gone"
	    android:textColor="@color/title_text"
	    android:textSize="@dimen/text_normal"
	    android:gravity="center_vertical"
	    android:background="@drawable/background">
	</TextView>
	    <LinearLayout
        android:id="@+id/update_bottom"
        android:layout_width="fill_parent"
       
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/pic_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:scaleType="center"
            android:src="@drawable/w_pic" />

        <ImageView
            android:id="@+id/topic_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:scaleType="center"
            android:src="@drawable/w_huati" />

        <ImageView
            android:id="@+id/at_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:scaleType="center"
            android:src="@drawable/w_at" />

        <ImageView
            android:id="@+id/face_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:scaleType="center"
            android:src="@drawable/w_sm" />

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/alpha"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_normal" />
    </LinearLayout>
	</LinearLayout>
    
    <GridView
        	android:layout_alignParentBottom="true"
            android:id="@+id/face_gridView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:horizontalSpacing="0dp"
            android:verticalSpacing="10dp"
            android:numColumns="6" >
    </GridView>
</RelativeLayout>